[metadata]
name = openai
version = attr: openai.version.VERSION
description = Python client library for the OpenAI API
long_description = file: README.md
long_description_content_type = text/markdown
author = OpenAI
author_email = support@openai.com
url = https://github.com/openai/openai-python
license_files = LICENSE
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7.1
zip_safe = True
include_package_data = True
install_requires =
  requests >= 2.20  # to get the patch for CVE-2018-18074
  tqdm  # Needed for progress bars
  typing_extensions; python_version<"3.8"  # Needed for type hints for mypy
  aiohttp  # Needed for async support

[options.extras_require]
dev =
  black ~= 21.6b0
  pytest == 6.*
  pytest-asyncio
  pytest-mock
datalib =
  numpy
  pandas >= 1.2.3  # Needed for CLI fine-tuning data preparation tool
  pandas-stubs >= 1.1.0.11  # Needed for type hints for mypy
  openpyxl >= 3.0.7  # Needed for CLI fine-tuning data preparation tool xlsx format
wandb =
  wandb
  numpy
  pandas >= 1.2.3  # Needed for CLI fine-tuning data preparation tool
  pandas-stubs >= 1.1.0.11  # Needed for type hints for mypy
  openpyxl >= 3.0.7  # Needed for CLI fine-tuning data preparation tool xlsx format
embeddings =
  scikit-learn >= 1.0.2  # Needed for embedding utils, versions >= 1.1 require python 3.8
  tenacity >= 8.0.1
  matplotlib
  plotly
  numpy
  scipy
  pandas >= 1.2.3  # Needed for CLI fine-tuning data preparation tool
  pandas-stubs >= 1.1.0.11  # Needed for type hints for mypy
  openpyxl >= 3.0.7  # Needed for CLI fine-tuning data preparation tool xlsx format

[options.entry_points]
console_scripts =
  openai = openai._openai_scripts:main

[options.package_data]
  openai = py.typed

[options.packages.find]
exclude =
  tests
  tests.*
